# portfolio-projects

./: .gitignore  PROJECTS.md  README.md  SECURITY.md  index.html
projects/finance-copilot/: .gitignore  LICENSE  PORTFOLIO_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt  run.py
projects/finance-copilot/config/: bank_formats.yaml  category_rules.yaml
projects/finance-copilot/examples/: sber_sample.csv  tinkoff_sample.csv
projects/finance-copilot/src/finance_copilot/: __init__.py  config.py  csv_parser.py  db.py  models.py  report.py  security.py
projects/finance-copilot/src/finance_copilot/bot/: __init__.py  handlers.py  keyboards.py  main.py
projects/finance-copilot/tests/: conftest.py  test_csv_parser.py  test_rules_categorizer.py
projects/lifeos/: Package.swift  (+2 more)
projects/telegram-automation-bot/: PORTFOLIO_DESCRIPTION.md  PORTFOLIO_NOTE.md  README.md  pyproject.toml  requirements.txt
projects/telegram-automation-bot/app/: __init__.py  __main__.py  config.py  config_import.py  gui.py  secure_setup.py  telethon_login.py
projects/telegram-automation-bot/packaging/: TelegramAutomationBot-onefile.spec  TelegramAutomationBot.spec  WINDOWS_TASK_SCHEDULER.md  macOS_LaunchAgent.plist.example
projects/telegram-automation-bot/storage/: database.py
projects/telegram-automation-bot/tests/: test_archive.py  test_config_import.py  test_database.py  test_media.py  test_menu.py  test_mtproxy.py  test_network.py  test_runner.py  test_secure_config.py  test_socks_feed.py  test_text_tools.py
projects/telegram-automation-bot/web/: __init__.py  server.py
(+251 files in other folders)
